# my_rag

./: pyproject.toml
src/student/: __main__.py  chunking_data.py  classes_types.py  indexing_stage.py  the_generation.py
