[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "file .toml for the RAG project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "rank-bm25>=0.2.2",
    "tqdm>=4.68.1",
    "transformers>=5.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/student"]
